Fix setup issues and add cross-platform support
- Add macOS-specific setup script (setup_macos.sh)
- Update README with cross-platform installation instructions
- Create comprehensive troubleshooting guide (TROUBLESHOOTING.md)
- Improve Java environment files with auto-detection
- Add setup verification script (verify_setup.py)

Addresses common issues:
- Maven build failures
- Java version conflicts
- Missing cp.txt files
- Different results from paper
- Platform-specific setup problems